# wasm-cra5-rewired

./: README.md
js/: config-overrides.js  package-lock.json  package.json
js/src/: App.js
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
